# marley

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  build.sh  confdefs.h  configure.ac  controller.cpp  get_deps_arch_linux_manjaro.sh  get_deps_ubuntu_18_04.sh  get_deps_ubuntu_20_04.sh  gui.cpp  marley.cpp  travis.sh
arch/: PKGBUILD  PKGBUILD-slim  create_package_arch_linux_manjaro.sh
debian/: changelog  control  control ubuntu 18.04  control ubuntu 20.04  control ubuntu 21.04  copyright  files  marley.install  marley_0.0.2+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.3+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.3.1+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.3.2+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.4+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.5+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.5.2+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.6+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.6.1+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.6.2+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.7+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.7.1+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.7.2+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.7.3+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.7.4+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.7.5+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.8+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.0.9+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.1.0+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.1.1+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.1.1.1+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.1.1.2+dfsg1-1ubuntu1.20.04.dsc  marley_0.1.2+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.1.2.1+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.1.2.2+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.1.2.3+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.1.2.4+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.1.2.4+dfsg1-1ubuntu1.20.04.dsc  marley_0.1.3+dfsg1-1ubuntu1.18.04.4.dsc  marley_0.1.3.1+dfsg1-1ubuntu1.20.04.dsc  marley_0.1.4+dfsg1-1ubuntu1.20.04.dsc  (+41 more)
mednafen/src/: FileStream.cpp  Makefile.am  mednafen.cpp  settings.cpp  settings.h  tests.cpp
mednafen/src/apple2/: Makefile.am.inc
mednafen/src/cdplay/: Makefile.am.inc
mednafen/src/cdrom/: CDAccess_Image.cpp  Makefile.am.inc
mednafen/src/cheat_formats/: Makefile.am.inc
mednafen/src/compress/: Makefile.am.inc
mednafen/src/cputest/: Makefile.am.inc
mednafen/src/demo/: Makefile.am.inc
mednafen/src/desa68/: Makefile.am.inc
mednafen/src/drivers/: Joystick_SDL.cpp  Makefile.am  input-default-buttons.h  input.cpp  main.cpp  main_marley.cpp  main_marley.h  video.cpp
mednafen/src/gb/: Makefile.am.inc
mednafen/src/gba/: Makefile.am.inc
mednafen/src/hash/: Makefile.am.inc
mednafen/src/hw_cpu/: Makefile.am.inc
mednafen/src/hw_misc/: Makefile.am.inc
mednafen/src/hw_sound/: Makefile.am.inc
mednafen/src/hw_video/: Makefile.am.inc
mednafen/src/lynx/: Makefile.am.inc
mednafen/src/md/: Makefile.am.inc
mednafen/src/minilzo/: Makefile.am.inc
mednafen/src/mpcdec/: Makefile.am.inc
mednafen/src/mthreading/: Makefile.am.inc
mednafen/src/nes/: Makefile.am.inc
mednafen/src/nes/boards/: Makefile.am.inc
mednafen/src/nes/input/: Makefile.am.inc
mednafen/src/nes/ppu/: Makefile.am.inc
mednafen/src/net/: Makefile.am.inc
mednafen/src/ngp/: Makefile.am.inc
mednafen/src/pce/: Makefile.am.inc
mednafen/src/pce_fast/: Makefile.am.inc
mednafen/src/pcfx/: Makefile.am.inc
mednafen/src/psx/: Makefile.am.inc  psx.cpp
mednafen/src/quicklz/: Makefile.am.inc
mednafen/src/resampler/: Makefile.am.inc
mednafen/src/sexyal/drivers/: sdl.cpp
mednafen/src/sms/: Makefile.am.inc
mednafen/src/snes/: Makefile.am.inc
mednafen/src/snes/src/memory/smemory/: smemory.cpp
mednafen/src/snes_faust/: Makefile.am.inc
mednafen/src/sound/: Makefile.am.inc
mednafen/src/string/: Makefile.am.inc
mednafen/src/tremor/: Makefile.am.inc
mednafen/src/trio/: Makefile.am.inc
mednafen/src/vb/: Makefile.am.inc
mednafen/src/video/: Makefile.am.inc
mednafen/src/wswan/: Makefile.am.inc
ppsspp/ext/native/tools/: CMakeLists.txt  atlastool.cpp  tools.sln
ppsspp/ext/native/tools/prebuilt/win64/: freetype.lib
screen_manager/Common/: Buffer.cpp  CMakeLists.txt  CPUDetect.h  ColorConv.cpp  GraphicsContext.h  KeyMap.cpp  KeyMap.h  Log.cpp  Log.h  LogManager.h  MemArena.h  MemoryUtil.cpp  MemoryUtil.h  StringUtils.cpp  StringUtils.h  SysError.cpp  TimeUtil.cpp
screen_manager/Common/Data/Collections/: ConstMap.h
screen_manager/Common/Data/Convert/: SmallDataConvert.h
screen_manager/Common/Data/Encoding/: Utf8.cpp  Utf8.h
screen_manager/Common/Data/Format/: IniFile.cpp  IniFile.h  PNGLoad.cpp  ZIMLoad.cpp
screen_manager/Common/Data/Hash/: Hash.h
screen_manager/Common/Data/Random/: Rng.h
screen_manager/Common/Data/Text/: I18n.cpp  I18n.h  Parsers.cpp  Parsers.h  WrapText.cpp  WrapText.h
screen_manager/Common/File/: DirListing.cpp  FileDescriptor.cpp  FileDescriptor.h  FileUtil.cpp  FileUtil.h  PathBrowser.cpp  PathBrowser.h
screen_manager/Common/File/VFS/: AssetReader.cpp  AssetReader.h  VFS.cpp  VFS.h
screen_manager/Common/GL/: GLInterfaceBase.h
screen_manager/Common/GL/GLInterface/: EGL.h  EGLAndroid.h  EGLSwitch.h
screen_manager/Common/GPU/: DataFormat.h  thin3d.cpp  thin3d.h  thin3d_create.h
screen_manager/Common/GPU/OpenGL/: DataFormatGL.cpp  DataFormatGL.h  GLDebugLog.cpp  GLFeatures.cpp  GLQueueRunner.cpp  GLQueueRunner.h  GLRenderManager.cpp  GLRenderManager.h  thin3d_gl.cpp
screen_manager/Common/Input/: GestureDetector.h  InputState.cpp  InputState.h  KeyCodes.h
screen_manager/Common/Math/: expression_parser.h
screen_manager/Common/Math/lin/: matrix4x4.cpp  matrix4x4.h  vec3.h
screen_manager/Common/Render/: DrawBuffer.cpp  DrawBuffer.h  Sprite_Sheet.h  TextureAtlas.cpp  TextureAtlas.h
screen_manager/Common/Render/Text/: draw_text.cpp  draw_text.h
screen_manager/Common/Serialize/: Serializer.h
screen_manager/Common/System/: Display.cpp  Display.h  NativeApp.h  System.h
screen_manager/Common/Thread/: ThreadUtil.cpp
screen_manager/Common/UI/: Context.cpp  Context.h  Root.cpp  Root.h  Screen.cpp  Screen.h  Tween.cpp  Tween.h  UI.cpp  UI.h  UIScreen.cpp  UIScreen.h  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h
(+1134 files in other folders)
