add_library(common
StringUtils.cpp
Buffer.cpp
TimeUtil.cpp
ColorConv.cpp
Log.cpp
SysError.cpp
Data/Text/WrapText.cpp
Data/Color/RGBAUtil.cpp
Data/Encoding/Utf8.cpp
Data/Format/PNGLoad.cpp
Data/Format/ZIMLoad.cpp
Data/Text/I18n.cpp
Data/Format/IniFile.cpp
Data/Text/Parsers.cpp
File/FileDescriptor.cpp
File/FileUtil.cpp
File/DirListing.cpp
File/VFS/VFS.cpp
File/VFS/AssetReader.cpp
GPU/thin3d.cpp
GPU/OpenGL/GLRenderManager.cpp
GPU/OpenGL/GLQueueRunner.cpp
GPU/OpenGL/GLFeatures.cpp
GPU/OpenGL/thin3d_gl.cpp
GPU/OpenGL/DataFormatGL.cpp
GPU/OpenGL/GLDebugLog.cpp
Input/InputState.cpp
MemoryUtil.cpp
Data/Convert/SmallDataConvert.cpp
Math/curves.cpp
Math/lin/matrix4x4.cpp
Math/fast/fast_matrix_sse.c
Render/Text/draw_text.cpp
Render/DrawBuffer.cpp
Render/TextureAtlas.cpp
System/Display.cpp
UI/Screen.cpp
UI/Tween.cpp
UI/ViewGroup.cpp
UI/UIScreen.cpp
UI/Root.cpp
UI/View.cpp
UI/Context.cpp
UI/UI.cpp
)
target_include_directories(common PUBLIC 
../Common
..
/usr/include/SDL2)
